# Kipp2

./: .gitignore  CMakeLists.txt  README.md
include/: BitInputStream.h  BitOutputStream.h  Chr.h  Compression.h  HuffTree.h  common.h
src/: BitInputStream.cpp  BitOutputStream.cpp  CMakeLists.txt  Chr.cpp  Compression.cpp  HuffTree.cpp  main.cpp
tests/: file8.txt
